Fix comandos, auto-guardado, ocultar jugadores del leaderboard y broadcast de recompensas